Set explicit z-index on interface body to ensure it’s pinned under the interface header

--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -63,6 +63,11 @@ html.interface-interface-skeleton__html-container {
 	// See also: https://drafts.csswg.org/css-overscroll/
 	overscroll-behavior-y: none;
 
+	// On Safari iOS on smaller viewports lack of a z-index causes the background
+	// to "bleed" through the header.
+	// See https://github.com/WordPress/gutenberg/issues/32631
+	z-index: z-index(".interface-interface-skeleton__body");
+
 	// Footer overlap prevention
 	.has-footer & {
 		@include break-medium() {
